--- a/src/main/resources.beta/mmall.properties
+++ b/src/main/resources.beta/mmall.properties
@@ -1,8 +1,8 @@
 
-ftp.server.ip=127.0.0.1
+ftp.server.ip=47.106.32.62
 ftp.user=ftpuser
 ftp.pass=123456
-ftp.server.http.prefix=ftp://
+ftp.server.http.prefix=ftp://47.106.32.62/
 
 
 alipay.callback.url=http://www.yejianbin.com/order/alipay_callback.do
