--- a/src/main/resources.beta/mmall.properties
+++ b/src/main/resources.beta/mmall.properties
@@ -2,7 +2,7 @@
 ftp.server.ip=47.106.32.62
 ftp.user=ftpuser
 ftp.pass=123456
-ftp.server.http.prefix=ftp://47.106.32.62/
+ftp.server.http.prefix=http://www.yejianbin.com/
 
 
 alipay.callback.url=http://www.yejianbin.com/order/alipay_callback.do
